--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,6 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
 }
 
@@ -40,3 +39,287 @@ a {
     color-scheme: dark;
   }
 }
+
+.Header {
+  padding-inline: 5px;
+  padding-block: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgb(238, 231, 231);
+}
+
+.header-left-content {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+
+  p {
+    cursor: pointer;
+    font-size: 40px;
+    font-weight: 800;
+  }
+
+  input {
+    background-color: rgb(238, 234, 234);
+    border-radius: 20px;
+    border: none;
+    height: 40px;
+  }
+}
+.header-right-content {
+  display: flex;
+  gap: 6px;
+  align-items: center;
+  justify-content: center;
+  color: gray;
+
+  p {
+    cursor: pointer;
+  }
+  button {
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    font-size: 16px;
+    border: none;
+    border-radius: 50%;
+    background-color: rgb(118, 42, 118);
+    color: #ffffff;
+    font-weight: 700;
+  }
+  div {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+}
+.loginPage {
+  background-color: rgb(246, 241, 234);
+  min-height: 100vh;
+  padding-block: 25px;
+}
+.login-nav {
+  padding-inline: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+
+  p {
+    font-weight: 900;
+    font-size: 28px;
+    cursor: pointer;
+  }
+  div {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+
+    p {
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+
+    button {
+      border: none;
+      border-radius: 28px;
+      color: white;
+      background-color: black;
+      padding: 16px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+  }
+}
+.divider {
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.loginFlexBox {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.loginFlexBoxPadding {
+  padding-left: 140px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.loginTitle {
+  font-size: 48px;
+}
+.loginMiniTitle {
+  font-size: 24px;
+}
+
+.loginButton {
+  background-color: black;
+  color: white;
+  font-weight: 500;
+  border: none;
+  border-radius: 36px;
+  padding-block: 10px;
+  padding-inline: 38px;
+  font-size: 22px;
+  margin-top: 10px;
+}
+.loginPageFooter {
+  display: flex;
+  gap: 14px;
+  color: rgb(112, 106, 106);
+  font-size: 14px;
+  margin-top: 20px;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.modal{
+  padding-block: 75px;
+  width: 50%;
+  margin-inline: auto;
+  top: 100px;
+  border: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  border-radius: 10px;
+  
+}
+
+.login-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  input{
+    width: 400px;
+    height: 35px;
+    border-radius: 16px;
+  }
+  button{
+    border: transparent;
+    background-color: black;
+    color: white;
+    border-radius: 16px;
+    padding: 10px 30px;
+
+  }
+}
+
+.signUp{
+  display: flex;
+  gap: 5px;
+  button{
+    border: transparent;
+    color: green;
+    background-color: transparent;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0px !important;
+
+  }
+}
+
+.closeModal{
+  top: 20px;
+  right: 30px;
+  position: absolute;
+  font-size: 20px;
+  border: transparent;
+  background-color: transparent;
+}
+
+.signOut{
+  border: transparent;
+  position: absolute;
+  top: 65px;
+  right: 50px !important;
+
+}
+
+.new-text{
+  margin-inline: auto;
+  width: 50%;
+  height: 75%;
+  form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  input{
+    margin-top: 50px;
+    width: 100%;
+    height: 50px;
+    color: black;
+    border: 3px solid black;
+    text-align: center;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  textarea{
+    border-radius: 6px;
+    width: 100%;
+    height: 300px;
+    border: 3px solid black;
+    text-align: center;
+    padding: 50px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  button{
+    border: transparent;
+    background-color: black;
+    border-radius: 16px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+  }
+}
+
+.post-card{
+  display: flex;
+  position: relative;
+  align-items: center;
+  width: 30%;
+  margin-inline: auto;
+}
+
+.post-container{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.post-image{
+  position: absolute;
+  right: 30px;
+}
+
+.post-text{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.post-actions{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.like-button{
+  border-radius: 16px;
+  padding: 10px;
+  border: transparent;
+}
+
